maze.lessons.maze.shortestpath.ShortestPathMaze.scala.error
JediEscaper:59: error: not found: value getCurrentWorld
	getCurrentWorld().getCell(x,y)
        ^